# rust-launcher

./: .gitignore  Cargo.toml  README.md  rust lanuch.pen
.github/workflows/: release.yml
crates/launcher-cli/: Cargo.toml  build.rs
crates/launcher-cli/src/: main.rs
crates/launcher-core/: Cargo.toml
crates/launcher-core/src/: error.rs  executor.rs  lib.rs  model.rs  platform.rs  scheduler.rs  store.rs
crates/launcher-gui/: Cargo.toml
crates/launcher-gui/src/: main.rs
crates/launcher-gui/ui/: components.slint  context_menu.slint  dialogs.slint  group_dialog.slint  inspector.slint  item_dialog.slint  logs.slint  main.slint  models.slint  plan_dialogs.slint  plan_structure.slint  schedule_dialog.slint  sidebar.slint
docs/: interaction-prd.md
