[package]
name = "launcher-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "launcher-gui"
path = "src/main.rs"

[dependencies]
launcher-core.workspace = true
rfd.workspace = true
slint.workspace = true

[build-dependencies]
slint-build.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
